# sonic-redfish

./: .dockerignore  MAINTAINERS  Makefile  README.md  pytest.ini
.github/workflows/: codeql.yml
patches/: 0001-Integrating-bmcweb-with-SONiC-s-build-system.patch
scripts/: format_gtest_output.py  format_pytest_output.py
sonic-dbus-bridge/: meson.build
sonic-dbus-bridge/debian/: not-installed  rules  sonic-dbus-bridge.install
sonic-dbus-bridge/include/: redis_state_publisher.hpp  redis_state_subscriber.hpp
sonic-dbus-bridge/src/: bridge_app.cpp  dbus_exporter.cpp  inventory_model.cpp  object_mapper.cpp  redis_state_publisher.cpp  redis_state_subscriber.cpp  state_manager.cpp  update_engine.cpp  user_mgr.cpp
tests/: README.md
tests/redfish-api/cases/: chassis.json  service_root.json
tests/redfish-api/data/: __init__.py  config.yaml  platform.json  redis_seed.py
tests/redfish-api/framework/: conftest.py  start_services.sh  test_runner.py  utils.py  validator.py
tests/unit-tests/: inventory_model_test.cpp
